sauvegarde avant pull