@@ -1,217 +1,345 @@
 package com.codeWithProject.ecom.service.impl;
 
-import com.codeWithProject.ecom.entity.Employe;
-import com.codeWithProject.ecom.entity.Formation;
-import com.codeWithProject.ecom.repository.EmployeRepository;
-import com.codeWithProject.ecom.repository.FormationRepository;
+import com.codeWithProject.ecom.entity.*;
+import com.codeWithProject.ecom.repository.*;
 import com.codeWithProject.ecom.service.FormationService;
-import com.codeWithProject.ecom.service.dto.FormationDTO;
-import com.codeWithProject.ecom.service.exception.BusinessException;
-import com.codeWithProject.ecom.service.exception.ResourceNotFoundException;
-import com.codeWithProject.ecom.service.mapper.FormationMapper;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
+
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
-@Slf4j
 public class FormationServiceImpl implements FormationService {
 
     private final FormationRepository formationRepository;
+    private final EmployeCompetenceRepository employeCompetenceRepository;
+    private final EmployeFormationRepository employeFormationRepository;
+    private final PosteCompetenceRepository posteCompetenceRepository;
+    private final FormationCompetenceRepository formationCompetenceRepository;
     private final EmployeRepository employeRepository;
-    private final FormationMapper mapper;
 
+    // 🔥 CREATE
     @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findAll() {
-        return formationRepository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+    public Formation create(Formation formation) {
+        return formationRepository.save(formation);
     }
 
+    // 🔍 GET ALL
     @Override
-    @Transactional(readOnly = true)
-    public Page<FormationDTO> findAll(Pageable pageable) {
-        Page<Formation> page = formationRepository.findAll(pageable);
-        List<FormationDTO> dtos = page.getContent().stream().map(mapper::toDto).collect(Collectors.toList());
-        return new PageImpl<>(dtos, pageable, page.getTotalElements());
+    public List<Formation> getAll() {
+        return formationRepository.findAll();
     }
 
+    // 🔍 GET BY ID
     @Override
-    @Transactional(readOnly = true)
-    public Optional<FormationDTO> findById(Long id) {
-        return formationRepository.findById(id).map(mapper::toDto);
+    public Formation getById(Long id) {
+        return formationRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Formation non trouvée"));
     }
 
+    // 🔄 UPDATE
     @Override
-    @Transactional(readOnly = true)
-    public Optional<FormationDTO> findByTitre(String titre) {
-        return formationRepository.findByTitre(titre).map(mapper::toDto);
+    public Formation update(Long id, Formation f) {
+        Formation formation = getById(id);
+
+        formation.setTitre(f.getTitre());
+        formation.setDescription(f.getDescription());
+        formation.setDomaine(f.getDomaine());
+        formation.setDureeHeures(f.getDureeHeures());
+        formation.setActif(f.getActif());
+
+        return formationRepository.save(formation);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findByDomaine(String domaine) {
-        return formationRepository.findByDomaine(domaine).stream().map(mapper::toDto).collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findActives() {
-        return formationRepository.findByActifTrue().stream().map(mapper::toDto).collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findFormationsRecentes() {
-        return formationRepository.findFormationsRecentes().stream().map(mapper::toDto).collect(Collectors.toList());
-    }
-
-    @Override
-    public FormationDTO create(FormationDTO dto) {
-        if (formationRepository.existsByTitre(dto.getTitre()))
-            throw new BusinessException("TITRE_EXISTANT", "Une formation avec ce titre existe déjà");
-        if (dto.getTitre() == null || dto.getTitre().trim().isEmpty())
-            throw new BusinessException("Le titre de la formation est obligatoire");
-        Formation formation = mapper.toEntity(dto);
-        Formation saved = formationRepository.save(formation);
-        return mapper.toDto(saved);
-    }
-
-    @Override
-    public FormationDTO update(Long id, FormationDTO dto) {
-        Formation formation = formationRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Formation", id));
-        if (dto.getTitre() != null && !dto.getTitre().equals(formation.getTitre())) {
-            if (formationRepository.existsByTitre(dto.getTitre()))
-                throw new BusinessException("TITRE_EXISTANT", "Une formation avec ce titre existe déjà");
-            formation.setTitre(dto.getTitre());
-        }
-        if (dto.getDescription() != null) formation.setDescription(dto.getDescription());
-        if (dto.getDomaine() != null) formation.setDomaine(dto.getDomaine());
-        if (dto.getDureeHeures() != null) formation.setDureeHeures(dto.getDureeHeures());
-        return mapper.toDto(formationRepository.save(formation));
-    }
-
+    // ❌ DELETE
     @Override
     public void delete(Long id) {
-        Formation formation = formationRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Formation", id));
-        formation.setActif(false);
-        formationRepository.save(formation);
+        formationRepository.deleteById(id);
+    }
+
+    // 🔍 FILTER
+    @Override
+    public List<Formation> getByDomaine(String domaine) {
+        return formationRepository.findByDomaine(domaine);
     }
 
     @Override
-    public FormationDTO activer(Long id) {
-        Formation formation = formationRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Formation", id));
-        formation.setActif(true);
-        return mapper.toDto(formationRepository.save(formation));
+    public List<Formation> getActives() {
+        return formationRepository.findByActifTrue();
     }
 
-    @Override
-    public FormationDTO desactiver(Long id) {
-        Formation formation = formationRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Formation", id));
-        formation.setActif(false);
-        return mapper.toDto(formationRepository.save(formation));
-    }
+    // 🧠 RECOMMANDATION PAR GAP (niveau)
 
     @Override
-    public FormationDTO ajouterParticipant(Long formationId, Long employeId) {
-        Formation formation = formationRepository.findById(formationId)
-                .orElseThrow(() -> new ResourceNotFoundException("Formation", formationId));
-        Employe employe = employeRepository.findById(employeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", employeId));
-        if (!formation.getActif())
-            throw new BusinessException("FORMATION_INACTIVE", "Impossible d'ajouter un participant à une formation inactive");
-        if (formation.getParticipants().contains(employe))
-            throw new BusinessException("DEJA_INSCRIT", "Cet employé est déjà inscrit à cette formation");
-        formation.getParticipants().add(employe);
-        return mapper.toDto(formationRepository.save(formation));
+public List<Formation> recommander(Long employeId) {
+
+    // 🔹 récupérer employé
+    Employe emp = employeRepository.findById(employeId)
+            .orElseThrow();
+
+    String poste = emp.getPoste();
+
+    List<EmployeCompetence> userSkills =
+            employeCompetenceRepository.findByEmployeId(employeId);
+
+    List<PosteCompetence> jobSkills =
+            posteCompetenceRepository.findByPoste(poste);
+
+    Map<Long, Integer> niveauxUser = new HashMap<>();
+
+    for (EmployeCompetence c : userSkills) {
+        niveauxUser.put(c.getCompetence().getId(), c.getNiveau());
     }
 
-    @Override
-    public FormationDTO retirerParticipant(Long formationId, Long employeId) {
-        Formation formation = formationRepository.findById(formationId)
-                .orElseThrow(() -> new ResourceNotFoundException("Formation", formationId));
-        Employe employe = employeRepository.findById(employeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", employeId));
-        formation.getParticipants().remove(employe);
-        return mapper.toDto(formationRepository.save(formation));
+    Map<Long, Integer> gaps = new HashMap<>();
+
+    for (PosteCompetence pc : jobSkills) {
+
+        int niveauUser = niveauxUser.getOrDefault(
+                pc.getCompetence().getId(), 0);
+
+        int gap = pc.getNiveauRequis() - niveauUser;
+
+        if (gap > 0) {
+            gaps.put(pc.getCompetence().getId(), gap);
+        }
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findFormationsByEmployeId(Long employeId) {
-        return formationRepository.findFormationsByEmployeId(employeId).stream()
-                .map(mapper::toDto).collect(Collectors.toList());
+    Map<Formation, Integer> scores = new HashMap<>();
+
+    for (Map.Entry<Long, Integer> entry : gaps.entrySet()) {
+
+        Long competenceId = entry.getKey();
+        int gap = entry.getValue();
+
+        List<FormationCompetence> list =
+                formationCompetenceRepository.findByCompetence_Id(competenceId);
+
+        for (FormationCompetence fc : list) {
+
+            Formation f = formationRepository
+                    .findById(fc.getFormationId())
+                    .orElse(null);
+
+            if (f == null) continue;
+
+            scores.put(
+                f,
+                scores.getOrDefault(f, 0) + gap
+            );
+        }
     }
 
+    return scores.entrySet()
+            .stream()
+            .sorted((a, b) -> b.getValue() - a.getValue())
+            .map(Map.Entry::getKey)
+            .limit(3)
+            .toList();
+}
+
+    // 🔹 MES FORMATIONS
     @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findFormationsNonSuiviesParEmploye(Long employeId) {
-        return formationRepository.findFormationsNonSuiviesParEmploye(employeId).stream()
-                .map(mapper::toDto).collect(Collectors.toList());
+    public List<Formation> getFormationsByEmploye(Long employeId) {
+
+        return employeFormationRepository.findByEmployeId(employeId)
+                .stream()
+                .map(ef -> ef.getFormation())
+                .toList();
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> findFormationsPopulaires(int limit) {
-        return formationRepository.findFormationsLesPlusSuivies().stream()
-                .limit(limit)
-                .map(obj -> mapper.toDto((Formation) obj[0]))
-                .collect(Collectors.toList());
+    // 🔥 RECO (sans IA)
+    public List<Formation> getRecommendations(Long employeId) {
+
+        Employe emp = employeRepository.findById(employeId)
+                .orElseThrow();
+
+       List<Formation> reco = recommander(employeId);
+
+        List<Long> dejaInscrit = employeFormationRepository.findByEmployeId(employeId)
+                .stream()
+                .map(ef -> ef.getFormation().getId())
+                .toList();
+
+        return reco.stream()
+                .filter(f -> !dejaInscrit.contains(f.getId()))
+                .toList();
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public Map<String, Long> countByDomaine() {
-        return formationRepository.countByDomaine().stream()
-                .collect(Collectors.toMap(arr -> (String) arr[0], arr -> (Long) arr[1]));
+    // 🤖 RECOMMANDATION IA (Flask)
+ @Override
+public List<Formation> getRecommendationsAI(Long employeId) {
+
+    // 🔹 récupérer employé
+    Employe emp = employeRepository.findById(employeId)
+            .orElseThrow();
+
+    // 🔹 récupérer formations non suivies
+    List<Formation> formations =
+            formationRepository.findFormationsNonSuivies(employeId);
+
+    if (formations.isEmpty()) {
+        return new ArrayList<>();
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public Double calculerDureeMoyenne() {
-        return formationRepository.dureeMoyenneFormations();
+    // 🔹 compétences utilisateur
+    List<EmployeCompetence> userSkillsList =
+            employeCompetenceRepository.findByEmployeId(employeId);
+
+    Map<String, Integer> userSkills = new HashMap<>();
+
+    for (EmployeCompetence ec : userSkillsList) {
+
+        if (ec.getCompetence() != null && ec.getCompetence().getNom() != null) {
+
+            userSkills.put(
+    ec.getCompetence().getNom().toLowerCase(),
+    convertNiveau(ec.getNiveau())
+);
+        }
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationDTO> search(String keyword) {
-        return formationRepository.searchFormations(keyword).stream()
-                .map(mapper::toDto).collect(Collectors.toList());
+    // 🔹 compétences requises poste
+    List<PosteCompetence> jobSkillsList =
+            posteCompetenceRepository.findByPoste(emp.getPoste());
+
+    Map<String, Integer> requiredSkills = new HashMap<>();
+
+    for (PosteCompetence pc : jobSkillsList) {
+
+        if (pc.getCompetence() != null && pc.getCompetence().getNom() != null) {
+
+           try {
+   requiredSkills.put(
+    pc.getCompetence().getNom().toLowerCase(),
+    pc.getNiveauRequis()
+);
+} catch (Exception e) {
+    System.out.println("❌ ERREUR conversion niveau: " + pc.getNiveauRequis());
+}
+        }
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<String> findAllDomaines() {
-        return formationRepository.findAllDomaines();
+    // 🔥 DEBUG
+    System.out.println("POSTE = " + emp.getPoste());
+    System.out.println("USER SKILLS = " + userSkills);
+    System.out.println("REQUIRED SKILLS = " + requiredSkills);
+
+    // 🔥 sécurité si aucun mapping poste
+    if (requiredSkills.isEmpty()) {
+        System.out.println("⚠️ Aucune compétence trouvée pour ce poste !");
+        return formations.stream().limit(3).toList();
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public Map<String, Object> getStatsTableauBord() {
-        List<Object[]> stats = formationRepository.getStatsTableauBord();
-        if (stats == null || stats.isEmpty()) return Map.of();
-        Object[] stat = stats.get(0);
-        Map<String, Object> result = new HashMap<>();
-        if (stat.length > 0) result.put("totalFormations", stat[0]);
-        if (stat.length > 1) result.put("formationsActives", stat[1]);
-        if (stat.length > 2) result.put("dureeMoyenne", stat[2]);
-        if (stat.length > 3) result.put("participantsMoyens", stat[3]);
-        if (stat.length > 4) result.put("totalParticipants", stat[4]);
-        return result;
+    // 🔹 liste noms formations
+    List<String> formationNames = formations.stream()
+            .map(f -> f.getTitre().toLowerCase())
+            .toList();
+
+    // 🔹 appel Flask
+    Map<String, Object> body = new HashMap<>();
+    body.put("userSkills", userSkills);
+    body.put("requiredSkills", requiredSkills);
+    body.put("formations", formationNames);
+    body.put("formationsSuivies", new ArrayList<>());
+
+    RestTemplate restTemplate = new RestTemplate();
+
+Object rawResponse = restTemplate.postForObject(
+    "http://localhost:5000/recommend",
+    body,
+    Object.class
+);
+
+if (!(rawResponse instanceof List<?> list)) {
+    return formations.stream().limit(3).toList();
+}
+
+List<Map<String, Object>> response = (List<Map<String, Object>>) list;
+    try {
+        response = restTemplate.postForObject(
+                "http://localhost:5000/recommend",
+                body,
+                List.class
+        );
+    } catch (Exception e) {
+        System.out.println("❌ ERREUR FLASK: " + e.getMessage());
+        return formations.stream().limit(3).toList();
     }
+
+    // 🔥 sécurité réponse
+    if (response == null || response.isEmpty()) {
+        return formations.stream().limit(3).toList();
+    }
+
+    // 🔹 récupérer noms recommandés
+    List<String> recommendedNames = response.stream()
+            .map(r -> ((String) r.get("formation")).toLowerCase())
+            .toList();
+
+    // 🔹 filtrer formations
+    return formations.stream()
+            .filter(f -> recommendedNames.contains(f.getTitre().toLowerCase()))
+            .toList();
+}
+
+
+
+private int convertNiveau(String niveau) {
+    if (niveau == null) return 0;
+
+    return switch (niveau.toUpperCase()) {
+        case "DEBUTANT" -> 1;
+        case "INTERMEDIAIRE" -> 2;
+        case "AVANCE" -> 3;
+        case "EXPERT" -> 4;
+        default -> 0;
+    };
+}
+
+
+@Override
+public List<Formation> getRecommendationsBySkills(Long employeId) {
+
+    // 🔹 compétences utilisateur
+    List<EmployeCompetence> userSkills =
+            employeCompetenceRepository.findByEmployeId(employeId);
+
+    // 🔹 formations non suivies
+    List<Formation> formations =
+            formationRepository.findFormationsNonSuivies(employeId);
+
+    Map<Formation, Integer> scores = new HashMap<>();
+
+    for (EmployeCompetence ec : userSkills) {
+
+        String skill = ec.getCompetence().getNom().toLowerCase();
+        int niveauUser = convertNiveau(ec.getNiveau());
+
+        // 🔥 gap = progression
+        int scoreBase = 5 - niveauUser; // plus faible = plus prioritaire
+
+        for (Formation f : formations) {
+
+            if (f.getTitre().toLowerCase().contains(skill)) {
+
+                scores.put(
+                    f,
+                    scores.getOrDefault(f, 0) + scoreBase
+                );
+            }
+        }
+    }
+
+    return scores.entrySet()
+            .stream()
+            .sorted((a, b) -> b.getValue() - a.getValue())
+            .map(Map.Entry::getKey)
+            .limit(3)
+            .toList();
+}
 }
